--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-markdown": "^8.0.7",
     "styled-components": "^5.3.8",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
